Ensure all animations are visible

--- a/css/animations.css
+++ b/css/animations.css
@@ -3,7 +3,7 @@
 }
 
 .animations .anim {
-	position: absolute;
+	position: fixed;
 	transform: translate(-50%, -50%);
 	pointer-events: none;
 	z-index: 100;
